<resources>
    <string name="app_name">Easymed</string>
    <!--Activity Names-->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_patient_visit_read_only">PatientVisitReadOnlyActivity</string>
    <string name="title_activity_patient_visit_edit">PatientVisitEditActivity</string>
    <string name="title_activity_pharmacy">PharmacyActivity</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_visit_report_export">VisitReportExportActivity</string>
    <string name="title_activity_clinic_report_export">ClinicReportExportActivity</string>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_generate_new_report">GenerateNewReportActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="land">Land</string>

    <string name="com.optimizely.api_key" translatable="false">AANPOUgBRLzZHR0NAOotgOtwlOPmwjgP</string>

    <string name="triage">Triage</string>
    <string name="consultation">Consultation</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="inventory">Inventory</string>
    <string name="reports">Reports</string>
    <string name="admin">Admin</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm">Confirm</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="report">Report</string>

    <string name="personal_data">Personal Data</string>
    <string name="vital_signs">Vital Signs</string>
    <string name="chief_complaints">Chief Complaints</string>
    <string name="triage_remark">Triage Remark</string>

    <string name="hpi">HPI</string>
    <string name="previous_medical_history">Previous Medical History</string>
    <string name="family_history">Family History</string>
    <string name="social_history">Social History</string>
    <string name="drug_history">Drug History</string>
    <string name="screening">Screening</string>
    <string name="allergy">Allergy</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="review_of_system">Review of System</string>
    <string name="red_flag">Red Flag</string>
    <string name="physical_examination">Physical Examination</string>
    <string name="clinical_diagnosis">Clinical Diagnosis</string>
    <string name="investigation">Investigation</string>
    <string name="medication">Medication</string>
    <string name="advice">Advice</string>
    <string name="follow_up">Follow-up</string>
    <string name="consultation_remark">Consultation Remark</string>

    <string name="systolic">Systolic</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_pressure_separator">/</string>
    <string name="diastolic">Diastolic</string>
    <string name="mmhg">mmHg</string>
    <string name="pulse_rate">Pulse rate</string>
    <string name="bpm">bpm</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="temperature">Temperature</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="head_circumference">Head Circumference</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="phone_number">Phone Number</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="blood_type">Blood Type</string>
    <string name="contraceptive_use">Contraceptive Use</string>
    <string name="status">Status</string>
    <string name="yes">Yes</string>
    <string name="any_remark">Any Remark?</string>
    <string name="no">No</string>
    <string name="before_leaving_mobile_clinic">Before leaving mobile clinic</string>
    <string name="after_back_to_office">After back to office</string>
    <string name="before_starting_mobile_clinic">Before starting mobile clinic</string>
    <string name="before_leaving_office">Before leaving office</string>
    <string name="username">Username</string>
    <string name="sigh_up">SIGN UP</string>
    <string name="gestation">Gestation</string>
    <string name="remove">Remove</string>
    <string name="click_to_select_date">Click to select date</string>
    <string name="first_name">Given name</string>
    <string name="your_name">What is your name?</string>
    <string name="native_name">Native name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weeks">Weeks</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="breast_feeding">Breast Feeding</string>
    <string name="cc_definition">The major health problem or concern, and its time course (e.g. chest pain for past 4 hours)</string>
    <string name="no_prescriptions">No prescriptions</string>
    <string name="click_the_button_to_retry">Click the button to retry.</string>
    <string name="click_the_button_to_report_back">Click the button to report back.</string>
    <string name="sync">Sync</string>
    <string name="last_name">Family name</string>
    <string name="middle_name">Middle name</string>
    <string name="empty">Empty</string>
    <string name="description">description</string>
    <string name="lmp_date">LMP Date</string>
    <string name="tag_number">Tag Number</string>
    <string name="not_sure">Not Sure</string>
    <string name="password">Password</string>
    <string name="type_here">Type here</string>
    <string name="static_the_string">Static</string>
    <string name="users">Users</string>
    <string name="staticString">static</string>
    <string name="new_patient">New Patient</string>
    <string name="open_saving">Open Saving</string>
    <string name="other">Other</string>
    <string name="no_of_miscarriage">No. of Miscarriage</string>
    <string name="no_of_still_birth">No. of still birth</string>
    <string name="chief_complain_short_form">CC</string>
    <string name="existing_patient">Existing Patient</string>
    <string name="lb">lb</string>
    <string name="degreeF">°F</string>
    <string name="degreeC">°C</string>
    <string name="no_patients">No patients</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>
    <string name="title_activity_static_data">StaticDataActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synchronization">Synchronization</string>
    <string name="server_status">Server Status</string>
    <string name="title_activity_server_status">ServerStatusActivity</string>
    <string name="server_app_version">Server App Version</string>
    <string name="node_js_version">Node.js Version</string>
    <string name="npm_version">NPM Version</string>
    <string name="title_activity_inventory_add">InventoryAddActivity</string>
    <string name="global">Global</string>
    <string name="Description">Description</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_add_edit_keyword">AddEditKeywordActivity</string>
</resources>
