<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/tcp">
        <item
            android:id="@+id/nav_triage"
            android:title="@string/triage"/>
        <item
            android:id="@+id/nav_consultation"
            android:title="@string/consultation"/>
        <item
            android:id="@+id/nav_pharmacy"
            android:title="@string/pharmacy"/>
    </group>

    <group
        android:id="@+id/ia">
        <item
            android:id="@+id/nav_inventory"
            android:title="@string/inventory"/>
        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports"/>
        <item
            android:id="@+id/nav_admin"
            android:title="@string/admin"/>
    </group>

    <group
        android:id="@+id/sal">
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:title="@string/settings"/>-->
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>
    </group>

</menu>
