<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="8dp"
              android:theme="@style/AppTheme">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/any_remark"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/yes"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/scRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tvYes"
            android:checked="true"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tvNo"
            android:layout_toLeftOf="@id/scRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:gravity="center"
            android:layout_centerVertical="true"/>


    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRemark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
            android:id="@+id/etRemark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/type_here"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
